--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Ionic App</title>
 
+
     <base href="/" />
 
     <meta name="color-scheme" content="light dark" />
@@ -22,6 +23,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- <script src="../src/pages/theme.js"></script> -->
   </head>
 
   <body>
